# nemo_cookbook

./: .gitignore  404.html  LICENSE.md  README.md  environment.yml  index.html  objects.inv  pixi.toml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bugreport.yml  config.yml  newfeature.yml  newrecipe.yml
.github/PULL_REQUEST_TEMPLATE/: feature.md  recipe.md
.github/workflows/: ci.yml  ci_docs.yml  ci_tests.yml
contributing/: index.html
docs/: mkdocs.yml
docs/docs/: contributing.md  example_nemodatatrees.ipynb  examples.md  howto.md  index.md  nemodatatree.md  recipe_barotropic_sf.ipynb  recipe_cmip6.ipynb  recipe_extract_mask_boundary.ipynb  recipe_extract_osnap.ipynb  recipe_extract_rapid.ipynb  recipe_heat_content.ipynb  recipe_heat_transport.ipynb  recipe_masked_stats.ipynb  recipe_moc_tracer.ipynb  recipe_moc_z.ipynb  recipe_sea_ice.ipynb  recipe_sfoc_sigma0.ipynb  recipe_sfwmt_sigma0.ipynb  recipe_transform_vertical_coords.ipynb  recipe_volume_census.ipynb  recipe_xesmf.ipynb  recipes.md  reference.md  release_notes.md  user_guide.md
examples/: index.html
howto/: index.html
nemo_cookbook/: __init__.py  accessors.py  core.py  examples.py  extract.py  extract_utils.py  index.py  integrate.py  interpolate.py  lbc.py  masks.py  nemodataarray.py  nemodatatree.py  processing.py  stats.py  transform.py  utils.py  validation.py
nemo_cookbook/src/: extract.py  extract_utils.py  lbc.py  mask.py  moc.py  nemo_datatree.py  nemodatatree.py  processing.py  transform.py  transport.py  wmt.py
nemodatatree/: index.html
recipe_barotropic_sf/: index.html  recipe_barotropic_sf.ipynb
recipe_cmip6/: index.html
recipe_extract_mask_boundary/: index.html  recipe_extract_mask_boundary.ipynb
recipe_extract_osnap/: index.html  recipe_extract_osnap.ipynb
recipe_extract_rapid/: index.html
recipe_heat_content/: index.html
recipe_heat_transport/: index.html  recipe_heat_transport.ipynb
recipe_masked_stats/: index.html  recipe_masked_stats.ipynb
recipe_moc_tracer/: index.html  recipe_moc_tracer.ipynb
recipe_moc_z/: index.html  recipe_moc_z.ipynb
recipe_sea_ice/: index.html  recipe_sea_ice.ipynb
recipe_sfoc_sigma0/: index.html  recipe_sfoc_sigma0.ipynb
recipe_sfwmt_sigma0/: index.html  recipe_sfwmt_sigma0.ipynb
recipe_transform_vertical_coords/: index.html  recipe_transform_vertical_coords.ipynb
recipe_volume_census/: index.html  recipe_volume_census.ipynb
recipe_xesmf/: index.html  recipe_xesmf.ipynb
recipes/: example_nemodatatrees.ipynb  index.html  nb_nemodatatree_tutorial.ipynb  recipe_TEMPLATE.ipynb  recipe_barotropic_sf.ipynb  recipe_cmip6.ipynb  recipe_extract_osnap.ipynb  recipe_extract_rapid.ipynb  recipe_extract_section.ipynb  recipe_heat_content.ipynb  recipe_masked_stats.ipynb  recipe_moc_tracer.ipynb  recipe_moc_z.ipynb  recipe_sfoc_sigma0.ipynb  recipe_sfwmt_sigma0.ipynb  recipe_transform_vertical_coords.ipynb  recipe_volume_census.ipynb  recipe_xesmf.ipynb  registry.txt
recipes/example_data/AGRIF_DEMO/: 2_domain_cfg.nc  3_domain_cfg.nc
recipes/example_data/AMM12/: AMM12_1d_20120102_20120110_grid_U.nc  AMM12_1d_20120102_20120110_grid_V.nc
reference/: index.html
release_notes/: index.html
search/: search_index.json
src/: moc.py  transports.py  wmt.py
tests/: conftest.py  test_examples.py  test_nemodataarray.py  test_nemodatarray_core.py  test_nemodatatree.py  test_nemodatatree_core.py  test_processing.py
user_guide/: index.html
