[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[tool.setuptools]
packages = ["nemo_cookbook"]

[project]
name = "nemo_cookbook"
description = "Python recipes for reproducible analysis of NEMO ocean general circulation model outputs."
requires-python = ">=3.10"
keywords = ["NEMO", "oceanography", "modelling", "analysis", "data", "noc"]
authors = [{email = "oliver.tooth@noc.ac.uk"},{name = "Ollie Tooth"}]
maintainers = [{name = "Ollie Tooth", email = "oliver.tooth@noc.ac.uk"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "aiohttp>=3.11.18",
  "dask[complete]>=2024.10.0",
  "flox>=0.10.1",
  "gsw>=3.6.19",
  "h5netcdf>=1.4.0",
  "jupyter>=1.1.1",
  "notebook>=7.4.1",
  "ipykernel>=6.29.5",
  "pys2index>=0.1.5",
  "xarray[io,accel,viz]>=2025.3.1",
  "xoak>=0.1.1",
  "s3fs>=2025.3.2",
  "s2geometry>=0.11.1",
  "fsspec>=2025.3.2",
  "requests>=2.32.3",
  "numpy>=2.2.5",
  "numba>=0.61.2",
  "numbagg>=0.9.0",
  "zarr>=3.0.7",
  ]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = ["pytest >=8.3.3"]

[project.urls]
repository = "https://github.com/NOC-MSM/nemo_cookbook"
