[project]
name = "nemo_cookbook"
description = "Recipes for reproducible analysis of NEMO ocean general circulation model outputs using xarray."
requires-python = ">=3.11"
keywords = ["NEMO", "oceanography", "modelling", "analysis", "data", "noc"]
dynamic = ["version"]
authors = [{email = "oliver.tooth@noc.ac.uk"},{name = "Ollie Tooth"}]
maintainers = [{name = "Ollie Tooth", email = "oliver.tooth@noc.ac.uk"}]
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "aiohttp>=3.11.18",
  "dask>=2025.7.0",
  "flox>=0.10.6",
  "fsspec>=2025.3.2",
  "gsw>=3.6.20",
  "matplotlib",
  "numbagg>=0.8",
  "numba>=0.59",
  "numpy<2.3",    # numba has not updated yet: https://github.com/numba/numba/issues/10105
  "netCDF==1.7.3",
  "pooch",
  "requests>=2.32.3",
  "scikit-learn>=1.7.1",
  "scikit-image>=0.25.2",
  "xarray>=2025.07.1",
  "zarr>=3.0.7",
  ]

[project.optional-dependencies]

complete = ["nemo_cookbook[parallel,viz,interactive]"]
parallel = ["dask[complete]"]
viz = ["cartopy>=0.23", "matplotlib", "nc-time-axis"]
interactive = ["jupyter>=1.1.1", "notebook>=7.4.1", "ipykernel>=6.29.5", "pyarrow>=21.0.0"]
test = ["pytest >=8.3.3"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.md"
content-type = "text/markdown"

[project.urls]
Repository = "https://github.com/NOC-MSM/nemo_cookbook"
Documentation = "https://noc-msm.github.io/nemo_cookbook/"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.3", "setuptools-scm>=8"]

[tool.setuptools.packages.find]
include = ["nemo_cookbook*"]

[tool.setuptools.package-data]
nemo_cookbook = ["registry.txt"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

