[project]
name = "nemo_cookbook"
description = "Recipes for reproducible analysis of NEMO ocean general circulation model outputs using xarray."
keywords = ["NEMO", "oceanography", "modelling", "analysis", "data", "noc"]
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
authors = [{email = "oliver.tooth@noc.ac.uk"},{name = "Ollie Tooth"}]
maintainers = [{name = "Ollie Tooth", email = "oliver.tooth@noc.ac.uk"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "aiohttp>=3.11.18",
  "dask>=2025.7.0",
  "flox>=0.10.6",
  "fsspec>=2025.3.2",
  "icechunk",
  "matplotlib",
  "numbagg>=0.8",
  "numba>=0.62",
  "numpy>=2.3",    # numba 0.62 added support for numpy 2.3
  "netCDF4<=1.7.3",
  "pooch",
  "requests>=2.32.3",
  "scikit-learn>=1.7.1",
  "scikit-image>=0.25.2",
  "xarray>=2025.07.1",
  "xoak>=0.2.0",
  "zarr>=3.0.7",
  ]

[project.optional-dependencies]

complete = ["nemo_cookbook[parallel,interactive]"]
parallel = ["dask[complete]"]
interactive = ["jupyter>=1.1.1", "notebook>=7.4.1", "ipykernel>=6.29.5", "pyarrow>=21.0.0", "cartopy>=0.23", "nc-time-axis", "gsw>=3.6.20",]
tests = ["pytest", "pytest-mock"]
docs = ["mkdocs-material", "mkdocs-glightbox", "mkdocs-jupyter", "mkdocstrings", "mkdocstrings-python"]

[project.urls]
Repository = "https://github.com/NOC-MSM/nemo_cookbook"
Documentation = "https://noc-msm.github.io/nemo_cookbook/"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.3", "setuptools-scm>=8"]

[tool.setuptools.packages.find]
include = ["nemo_cookbook*"]

[tool.setuptools.package-data]
nemo_cookbook = ["registry.txt"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
